[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blebot"
version = "4.26.0"
description = "Python Bale bot api."
authors = [{name = "amirabolfazle", email = "amirabolfazle.alipour@hotmail.com"}]
license = {text = "GPL2"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Bale", "bot", "api", "tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
]
dependencies = ["requests"]

[project.urls]
Homepage = "https://github.com/baledevs/blebot"
Documentation = "https://pytba.readthedocs.org"
Repository = "https://github.com/baledevs/blebot"
Issues = "https://github.com/baledevs/blebot/issues"


[project.optional-dependencies]
json = ["ujson"]
PIL = ["Pillow"]
redis = ["redis>=3.4.1"]
aiohttp = ["aiohttp"]
fastapi = ["fastapi"]
uvicorn = ["uvicorn"]
psutil = ["psutil"]
coloredlogs = ["coloredlogs"]
watchdog = ["watchdog"]


[tool.hatch.build.targets.wheel]
include = ["blebot/*"]
